# physicsml

./: .gitignore  README.md  pyproject.toml
Lagrangian_Mechanics/PARTICLE_ON_CURVE/: PENDULUM.ipynb  PENDULUM.py
